<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/darkpurple">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnBackFromHowToPlay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Back"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                style="@style/Widget.Material3.Button.ElevatedButton"/>



            <com.google.android.material.card.MaterialCardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                style="?attr/materialCardViewElevatedStyle"
                app:strokeColor="@color/black"
                app:cardBackgroundColor="@color/purple">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tictactoe"
                        android:textColor="@color/white"
                        android:textSize="30sp"
                        android:layout_marginTop="10dp"
                        android:layout_gravity="center"
                        android:layout_marginBottom="10dp"/>

                    <com.google.android.material.divider.MaterialDivider
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:dividerInsetStart="100dp"
                        app:dividerInsetEnd="100dp"
                        app:dividerColor="@color/white"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        app:dividerThickness="2dp"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tictactoeHowToPlay"
                        android:textColor="@color/white"
                        android:fontFamily="@font/robotomonosemibold"
                        android:padding="15dp"
                        android:textSize="17sp"

                        android:layout_gravity="center"/>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>


            <com.google.android.material.card.MaterialCardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                style="?attr/materialCardViewElevatedStyle"
                app:strokeColor="@color/black"
                app:cardBackgroundColor="@color/purple">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Hangman"
                        android:textColor="@color/white"
                        android:textSize="30sp"
                        android:layout_marginTop="10dp"
                        android:layout_gravity="center"
                        android:layout_marginBottom="10dp"/>

                    <com.google.android.material.divider.MaterialDivider
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:dividerInsetStart="100dp"
                        app:dividerInsetEnd="100dp"
                        app:dividerColor="@color/white"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        app:dividerThickness="2dp"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hangmanHowToPlay"
                        android:textColor="@color/white"
                        android:padding="15dp"
                        android:textSize="17sp"

                        android:fontFamily="@font/robotomonosemibold"
                        android:layout_gravity="center"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hangmanDifficulties"
                        android:textColor="@color/white"
                        android:fontFamily="@font/robotomonosemibold"
                        android:padding="15dp"
                        android:textSize="17sp"

                        android:layout_gravity="center"/>

                </LinearLayout>




            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                style="?attr/materialCardViewElevatedStyle"
                app:strokeColor="@color/black"
                app:cardBackgroundColor="@color/purple">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Memory"
                        android:textColor="@color/white"
                        android:textSize="30sp"
                        android:layout_marginTop="10dp"
                        android:layout_gravity="center"
                        android:layout_marginBottom="10dp"/>

                    <com.google.android.material.divider.MaterialDivider
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:dividerInsetStart="100dp"
                        app:dividerInsetEnd="100dp"
                        app:dividerColor="@color/white"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        app:dividerThickness="2dp"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/memoryHowToPlay"
                        android:textColor="@color/white"
                        android:textSize="17sp"
                        android:padding="15dp"
                        android:fontFamily="@font/robotomonosemibold"
                        android:layout_gravity="center"/>

                </LinearLayout>




            </com.google.android.material.card.MaterialCardView>


        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>